--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
     font-size: 19px;
+    font-family: 'Roboto', sans-serif;
 }
+
 table{
     width: 50%;
     margin: 30px auto;
